modified info attribute

--- a/amex default-prediction.ipynb
+++ b/amex default-prediction.ipynb
@@ -281,17 +281,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Hp\\anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: FutureWarning: null_counts is deprecated. Use show_counts instead\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -497,7 +489,7 @@
     }
    ],
    "source": [
-    "df.info(verbose=True,null_counts=True)"
+    "df.info(verbose=True,show_counts=True)"
    ]
   },
   {
